# fastMP

./: README.md  pyproject.toml  requirements.txt
fastmp/: __init__.py  fastmp.py  fastmp_21_09.py  fastmp_23_09.py  fastmp_new.py  fastmp_orig.py  fastmp_r27.py  fastmp_test.py
